ext/xmlrpc/xmlrpc-epi-php.c
@@ -1344,8 +1344,8 @@ int set_zval_xmlrpc_type(zval* value, XMLRPC_VALUE_TYPE newtype) /* {{{ */
 			if (newtype == xmlrpc_datetime) {
 				XMLRPC_VALUE v = XMLRPC_CreateValueDateTime_ISO8601(NULL, value->value.str.val);
 				if (v) {
-					time_t timestamp = XMLRPC_GetValueDateTime(v);
-					if (timestamp) {
+					time_t timestamp = (time_t) php_parse_date(XMLRPC_GetValueDateTime_ISO8601(v), NULL);
+					if (timestamp) {	
 						zval* ztimestamp;
 
 						MAKE_STD_ZVAL(ztimestamp);
